Nazzida 1.0.0 - 2022-02-20
- General
  * note: initial released version